--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "7.24.7",
-    "@babel/preset-react": "7.24.7",
     "@babel/preset-typescript": "7.24.7",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
     "babel-loader": "9.1.3",
     "html-webpack-plugin": "5.6.0",
     "serve": "14.2.3",
@@ -23,8 +20,6 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@module-federation/enhanced": "0.8.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@module-federation/enhanced": "0.8.6"
   }
 }
