--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mf-minimal-repro",
   "version": "0.0.0",
   "private": true,
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "7.26.0",
     "@babel/preset-typescript": "7.26.0",
